# life-os-personal

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  index.html  lifeos_dashboard.html  manifest.webmanifest  package.json  pnpm-lock.yaml  pyproject.toml  sw.js  tailwind.config.cjs
backend/lifeos/: __init__.py  config.py  database.py  install.py  main.py  migrations.py  models.py  schemas.py  security.py  seed_demo.py  serializers.py
backend/lifeos/routers/: __init__.py  automation.py  data.py  finance.py  life.py  system.py  tax.py
backend/lifeos/services/: __init__.py  ai_service.py  backups.py  classifier.py  files.py  legacy_import.py  tax_parser.py
demo/: README.md
docs/: ARCHITECTURE.md  AUDIT.md  AUTOMATIONS.md  MIGRATION.md  OLLAMA.md  PRIVACY.md  ROADMAP.md
docs/examples/: github-actions-ci.yml
frontend/assets/: app.css
frontend/assets/js/core/: apiClient.js  backendStatus.js  dataProvider.js  (+1 more)
frontend/js/core/: api.js  bootstrap.js
migrations/: env.py
migrations/versions/: 40450f8b5d64_initial_schema.py  5d71c8a4f023_expand_debt_tracking.py  9f2a6e51c431_finance_write_foundation.py  c87b95f42a10_health_car_write_foundation.py
scripts/: install-local.command  scan-private-data.py  start-lifeos.command  stop-lifeos.command  vendor-assets.mjs
tests/: conftest.py  test_ai_service.py  test_api.py  test_finance_api.py  test_health_car_api.py
tests/fixtures/: demo_cfdi.xml  legacy_backup_demo.json
tests/frontend/: apiClient.test.mjs  dashboardBridge.test.mjs  dataProvider.test.mjs  financeParity.test.mjs  healthCarParity.test.mjs
(+3 files in other folders)
