[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "life-os-personal"
version = "1.0.0a1"
description = "Local-first personal operating system with FastAPI, SQLite and a PWA frontend."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "Life OS Personal" }]
dependencies = [
  "alembic>=1.14,<2",
  "defusedxml>=0.7,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
lifeos = "lifeos.main:run"
lifeos-install = "lifeos.install:main"
lifeos-seed-demo = "lifeos.seed_demo:main"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"backend/lifeos/routers/*.py" = ["B008"]
"backend/lifeos/security.py" = ["B008"]
"migrations/**/*.py" = ["E501", "UP007", "UP035"]
